crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__native_queries__select_artist.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      },
      {
        "Name": "Alice In Chains"
      }
    ]
  }
]
