crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__native_queries__select_order_by_artist_album_count.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden",
        "albums": {
          "rows": [
            {
              "Title": "A Matter of Life and Death"
            },
            {
              "Title": "A Real Dead One"
            },
            {
              "Title": "A Real Live One"
            }
          ],
          "aggregates": {
            "how_many_albums": 3
          }
        }
      },
      {
        "Name": "Os Paralamas Do Sucesso",
        "albums": {
          "rows": [
            {
              "Title": "Acústico MTV"
            },
            {
              "Title": "Arquivo II"
            },
            {
              "Title": "Arquivo Os Paralamas Do Sucesso"
            }
          ],
          "aggregates": {
            "how_many_albums": 3
          }
        }
      },
      {
        "Name": "Black Label Society",
        "albums": {
          "rows": [
            {
              "Title": "Alcohol Fueled Brewtality Live! [Disc 1]"
            },
            {
              "Title": "Alcohol Fueled Brewtality Live! [Disc 2]"
            }
          ],
          "aggregates": {
            "how_many_albums": 2
          }
        }
      },
      {
        "Name": "Faith No More",
        "albums": {
          "rows": [
            {
              "Title": "Album Of The Year"
            },
            {
              "Title": "Angel Dust"
            }
          ],
          "aggregates": {
            "how_many_albums": 2
          }
        }
      },
      {
        "Name": "U2",
        "albums": {
          "rows": [
            {
              "Title": "Achtung Baby"
            },
            {
              "Title": "All That You Can't Leave Behind"
            }
          ],
          "aggregates": {
            "how_many_albums": 2
          }
        }
      }
    ]
  }
]
